fix: Update footer text color for better visibility

--- a/src/app/page-template/mini-footer/mini-footer.component.scss
+++ b/src/app/page-template/mini-footer/mini-footer.component.scss
@@ -7,7 +7,7 @@
 
   p {
     margin: 0;
-    color: #ffffff; // gray-500
+    color: #fff; // gray-500
   }
 
   .footer-bottom {
@@ -21,7 +21,7 @@
 
     p {
       margin: 0;
-      color: #000000;
+      color: #fff;
       font-weight: 500;
     }
 
